assets/photos-page/css/main.css
/* ... */
		@media screen and (max-width: 980px) {

			#main .thumb {
				-moz-transition-delay: 2.075s;
				-webkit-transition-delay: 2.075s;
				-ms-transition-delay: 2.075s;
				transition-delay: 2.075s;
				height: calc(28.57143vh - 1.33333em);
				min-height: 18em;
				width: 50%;
			}

				#main .thumb:nth-child(1) {
					-moz-transition-delay: 0.65s;
					-webkit-transition-delay: 0.65s;
					-ms-transition-delay: 0.65s;
					transition-delay: 0.65s;
				}

				#main .thumb:nth-child(2) {
					-moz-transition-delay: 0.8s;
					-webkit-transition-delay: 0.8s;
					-ms-transition-delay: 0.8s;
					transition-delay: 0.8s;
				}

				#main .thumb:nth-child(3) {
					-moz-transition-delay: 0.95s;
					-webkit-transition-delay: 0.95s;
					-ms-transition-delay: 0.95s;
					transition-delay: 0.95s;
				}

				#main .thumb:nth-child(4) {
					-moz-transition-delay: 1.1s;
					-webkit-transition-delay: 1.1s;
					-ms-transition-delay: 1.1s;
					transition-delay: 1.1s;
				}

				#main .thumb:nth-child(5) {
					-moz-transition-delay: 1.25s;
					-webkit-transition-delay: 1.25s;
					-ms-transition-delay: 1.25s;
					transition-delay: 1.25s;
				}

				#main .thumb:nth-child(6) {
					-moz-transition-delay: 1.4s;
					-webkit-transition-delay: 1.4s;
					-ms-transition-delay: 1.4s;
					transition-delay: 1.4s;
				}

				#main .thumb:nth-child(7) {
					-moz-transition-delay: 1.55s;
					-webkit-transition-delay: 1.55s;
					-ms-transition-delay: 1.55s;
					transition-delay: 1.55s;
				}

				#main .thumb:nth-child(8) {
					-moz-transition-delay: 1.7s;
					-webkit-transition-delay: 1.7s;
					-ms-transition-delay: 1.7s;
					transition-delay: 1.7s;
				}

				#main .thumb:nth-child(9) {
					-moz-transition-delay: 1.85s;
					-webkit-transition-delay: 1.85s;
					-ms-transition-delay: 1.85s;
					transition-delay: 1.85s;
				}

		}

		@media screen and (max-width: 480px) {

			#main .thumb {
				-moz-transition-delay: 1.175s;
				-webkit-transition-delay: 1.175s;
				-ms-transition-delay: 1.175s;
				transition-delay: 1.175s;
				height: calc(40vh - 2em);
				min-height: 18em;
				width: 100%;
			}

				#main .thumb:nth-child(1) {
					-moz-transition-delay: 0.65s;
					-webkit-transition-delay: 0.65s;
					-ms-transition-delay: 0.65s;
					transition-delay: 0.65s;
				}

				#main .thumb:nth-child(2) {
					-moz-transition-delay: 0.8s;
					-webkit-transition-delay: 0.8s;
					-ms-transition-delay: 0.8s;
					transition-delay: 0.8s;
				}

				#main .thumb:nth-child(3) {
					-moz-transition-delay: 0.95s;
					-webkit-transition-delay: 0.95s;
					-ms-transition-delay: 0.95s;
					transition-delay: 0.95s;
				}

		}

		.album-heading {
			width: 100%;
			flex: 0 0 100%;
			margin: 0; /* Remove default margins */
			padding: 0.5em 0; /* Adjust padding as needed */
			box-sizing: border-box; /* Include padding and border in the element's total width */
			text-align: center;
			background-color: #4acaa8; /* Set your desired background color */
			color: #ffffff;
		}

/* Footer */

	#footer .copyright {
		color: rgba(255, 255, 255, 0.65);
		font-size: 1em;
		text-decoration: none;
	}

		#footer .copyright a {
			color: #fff;
			text-decoration: none;
		}

		#footer {
			display: -moz-flex;
			display: -webkit-flex;
			display: -ms-flex;
			display: flex;
			-moz-flex-wrap: wrap;
			-webkit-flex-wrap: wrap;
			-ms-flex-wrap: wrap;
			flex-wrap: wrap;
			padding: 1em 5em 3em 5em ;
			width: calc(100% + 2em);
			margin: 0 0 3em -2em;
		}
	
			#footer > * {
				width: calc(50% - 2em);
				margin-left: 2em;
			}
	
			#footer .copyright {
				width: 100%;
				margin: 2.5em 0 2em 0;
				font-size: 0.95em;
				text-align: center;
			}
	
			@media screen and (max-width: 1280px) {
	
				#footer {
					padding: 4em 4em 2em 4em ;
				}
	
			}
	
			@media screen and (max-width: 980px) {
	
				#footer {
					padding: 4em 3em 2em 3em ;
					display: block;
					margin: 0 0 3em 0;
					width: 100%;
				}
	
					#footer > * {
						width: 100%;
						margin-left: 0;
						margin-bottom: 3em;
					}
	
					#footer .copyright {
						text-align: left;
					}
	
			}
	
			@media screen and (max-width: 736px) {
	
				#footer {
					padding: 3em 2em 1em 2em ;
				}
	
			}
	
			@media screen and (max-width: 480px) {
	
				#footer {
					padding: 3em 1.5em 1em 1.5em ;
				}
	
			}
	
			@media screen and (max-width: 480px) {
	
				#footer {
					padding: 2.5em 1em 0.5em 1em ;
				}
	
			}

/* Menu Toggle Button */
#menu-toggle {
	position: fixed;
	top: 1em;
	right: 1em;
	z-index: 1000;
	cursor: pointer;
	color: #fff;
	opacity: 0.7;
	font-size: 1.25em;
	line-height: 1;
	padding: 0.5em;
	border: 1px solid rgba(255, 255, 255, 0.5);
	border-radius: 0.25em;
	background-color: transparent;
	transition: opacity 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
  }
  
  #menu-toggle:hover {
	color: #ffffff;
	opacity: 1;
	border-color: rgba(255, 255, 255, 0.5);
  }
  
  #menu-toggle::before {
	content: '\f0c9';
	font-family: 'Font Awesome 5 Free';
	font-weight: 900;
  }
  
  /* Side Menu */
  #side-menu {
	position: fixed;
	top: 0;
	right: -260px;
	width: 250px;
	height: 100%;
	background-color: rgba(36, 38, 41, 0.95);
	overflow-x: hidden;
	transition: right 0.3s ease-in-out;
	z-index: 999;
	display: flex;              /* Added */
	flex-direction: column;     /* Added */
  }
  
  #side-menu.open {
	right: 0;
  }
  
  #side-menu ul {
	list-style-type: none;
	padding: 1em 0;
	margin: 0;
	flex: 1 0 auto;             /* Allow the ul to grow */
	display: flex;              /* Added */
	flex-direction: column;     /* Added */
  }
  
  #side-menu ul li {
	border-bottom: 1px solid #36383c;
  }
  
  #side-menu ul li a {
	display: block;
	color: #dddddd;
	padding: 0.75em 1em;
	text-decoration: none;
	font-size: 0.9em;
	text-transform: uppercase;
	letter-spacing: 0.1em;
	font-weight: 300;
  }
  
  #side-menu ul li a:hover {
	color: #4acaa8;
  }
/* ... */

